added eager loading
